[package]
name = "tokio-named-pipe"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
futures = "0.3.5"
miow = { path = "../miow" } # "0.3.3"
log = "0.4.8"
mio-named-pipes = "0.1.6"
tokio = { version = "0.2.21", features = ["io-driver", "io-util"] }
winapi = "0.3.8"

# Adds support for Connected trait
tonic = { version = "0.2.1", optional = true }

[features]
default = []
