[package]
name = "tokio-named-pipe"
version = "0.2.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
futures = "0.3.5"
log = "0.4.11"
tokio = { version = "1.17", features = ["net"] }
winapi = { version = "0.3.9", features = ["securitybaseapi", "sddl", "accctrl", "aclapi"] }

[dev-dependencies] 
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "io-util"] }

[features]
default = []
